# TeethClassification

./: .gitignore  README.md  dataset_preprocessing.py  extract_teeth.py  main.py  pyproject.toml  resnet_gnn.py  teeth_final.py  test.py
